# i18n_codegen

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  parse.rs  placeholder_parsing.rs
tests/: customizing_placeholders.rs  integration_test.rs
tests/compile_fail/: missing_strings_from_locales.rs  missing_strings_from_locales.stderr
tests/compile_fail/missing_strings_from_locales/: en.json
tests/doc_locales/: da.json  en.json
tests/locales/: da.json  en.json
tests/locales_with_different_placeholders/: da.json  en.json
