[package]
name = "i18n_codegen"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

[dependencies]
syn = "0.15.22"
quote = "0.6.10"
proc-macro2 = "0.4.24"
serde_json = "1.0.38"
heck = "0.3.1"
rayon = "1.2.0"

[dev_dependencies]
trybuild = "1.0.14"
version-sync = "0.8.1"

[lib]
proc-macro = true
path = "src/lib.rs"
