[package]
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
categories = ["web-programming"]
description = "Safe localization library using code generation"
documentation = "https://docs.rs/i18n_codegen"
edition = "2018"
homepage = "https://github.com/davidpdrsn/i18n_codegen"
keywords = ["web", "i18n", "localization", "translation"]
license = "MIT"
name = "i18n_codegen"
readme = "README.md"
repository = "https://github.com/davidpdrsn/i18n_codegen.git"
version = "0.1.2"

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0.38"
heck = "0.3.1"
rayon = "1.2.0"

[dev_dependencies]
trybuild = "1.0.14"
version-sync = "0.8.1"

[lib]
proc-macro = true
path = "src/lib.rs"
